Solana DvP: Various cleanup (#139)
This includes using JUnit Jupiter, instead of the older JUnit, which is
required by the `SolanaNotaryExtension`, and using latest versions of
the Solana notary and toolkit.